@@ -8,8 +8,8 @@
  * Woo: 5278104:bf3cf30871604e15eec560c962593c1f
  * Text Domain: woocommerce-payments
  * Domain Path: /languages
- * WC requires at least: 4.0
- * WC tested up to: 5.6
+ * WC requires at least: 4.4
+ * WC tested up to: 5.7
  * Requires WP: 5.6
  * Version: 3.0.0
  *
