@@ -18,6 +18,8 @@
 * Fix - Transaction search with translated terms
 * Update - Replace REST endpoint for onboarding initialization.
 * Fix - UPE missing international card fees.
+* Update - Bump minimum supported version of WooCommerce from 5.4 to 5.5.
+* Update - Bump minimum required version of WooCommerce from 4.0 to 4.4.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
